--- a/pl/mail/chrome/messenger/messenger.properties
+++ b/pl/mail/chrome/messenger/messenger.properties
@@ -378,6 +378,8 @@ processingJunkMessages      = Przetwarzanie niechcianych wiadomości
 # Messenger bootstrapping messages
 fileNotFoundTitle = Nie odnaleziono pliku
 fileNotFoundMsg   = Plik %S nie istnieje.
+fileEmptyTitle    = Pusty plik
+fileEmptyMsg      = Plik %S jest pusty.
 
 # headerFieldYou=You
 # second person direct object pronoun; used in the collapsed header view if
