--- a/pl/mail/chrome/messenger/imapMsgs.properties
+++ b/pl/mail/chrome/messenger/imapMsgs.properties
@@ -137,10 +137,6 @@
 # Place the word %2$S where the total number of messages should appear.
 5103=Kopiowanie wiadomości %1$S z %2$S do %3$S
 
-## @name IMAP_LOGIN_DISABLED
-## @loc None
-5104=Nie ma możliwości zalogowania się do %S, ponieważ serwer ma wyłączoną tę funkcję. Być może z tym serwerem należy się łączyć używająć SSL lub TLS. Proszę sprawdzić ustawienia połączenia w Konfiguracji kont, kategoria Konfiguracja serwera.
-
 ## @name IMAP_MOVE_FOLDER_TO_TRASH
 5105 = Czy na pewno usunąć folder '%S'?
 
@@ -152,3 +148,7 @@
 
 ## @name IMAP_DELETE_FOLDER_BUTTON_LABEL
 5108 = &Usuń folder
+
+## @name IMAP_LOGIN_DISABLED
+## @loc None
+5109 = Nie ma możliwości zalogowania się do %S, ponieważ serwer nie pozwala na logowanie bez szyfrowania STARTTLS lub SSL/TLS. Proszę spróbować włączyć bezpieczne uwierzytelnianie lub szyfrowanie połączenia w Konfiguracji kont (kategoria Konfiguracja serwera).
