--- a/pl/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/pl/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -157,9 +157,12 @@ subjectEmptyMessage        = Wysyłana wiadomość nie posiada tematu.
 sendWithEmptySubjectButton = &Wyślij bez tematu
 cancelSendingButton        = &Anuluj wysyłanie
 
-recipientDlogMessage = Z tego konta można wysyłać wiadomości jedynie na adresy e-mail. Próby wysłania wiadomości na serwery grup dyskusyjnych zostaną zignorowane.
+noNewsgroupSupportTitle = Brak obsługi grup dyskusyjnych
+recipientDlogMessage    = Z tego konta można wysyłać wiadomości jedynie na adresy e-mail. Próby wysłania wiadomości na serwery grup dyskusyjnych zostaną zignorowane.
 
+addressInvalidTitle       = Błędny adres odbiorcy
 addressInvalid            = %1$S nie jest poprawnym adresem e-mail. Adres e-mail powinien mieć budowę użytkownik@domena. Proszę poprawić adres przed wysłaniem wiadomości.
+
 attachPageDlogTitle       = Podaj adres strony (URL)
 attachPageDlogMessage     = Adres strony, którą chcesz załączyć:
 messageAttachmentSafeName = Załączona wiadomość
