--- a/pl/mail/chrome/messenger/preferences/preferences.properties
+++ b/pl/mail/chrome/messenger/preferences/preferences.properties
@@ -9,28 +9,26 @@ domainDuplicationError = Listy domyślnego formatowania HTML i tekstowego nie mo
 confirmResetJunkTrainingTitle = Potwierdź
 confirmResetJunkTrainingText  = Czy na pewno zresetować dane treningowe filtru niechcianej poczty?
 
-desktopFolderName         = Pulpit
-myDownloadsFolderName     = Pobrane pliki
-chooseDownloadFolderTitle = Wybór folderu dla pobieranych plików
+desktopFolderName             = Pulpit
+myDownloadsFolderName         = Pobrane pliki
+chooseAttachmentsFolderTitle  = Wybierz folder
 
-extensionNone         = (BRAK)
-removeButtonSingle    = Usuń czynność
-removeButtonMultiple  = Usuń czynności
-removeTitleSingle     = Usuń czynność
-removeTitleMultiple   = Usuń czynności
-removeMessageSingle   = Wybrana czynność nie będzie już więcej wykonywana podczas pobierania plików danego typu. Czy na pewno usunąć tę czynność?
-removeMessageMultiple = Wybrane czynności nie będą już więcej wykonywane podczas pobierania plików danych typów. Czy na pewno usunąć te czynności?
-fileEnding            = plik %S
-saveToDisk            = Zapisz na dysku
-openWith              = Otwórz w %S
-actionsFiltered       = Następujące czynności pasują do zapytania:
-actionsAll            = Wykonuj przypisane czynności automatyczne dla każdego z poniższych typów plików:
+fileEnding = plik %S
+saveFile   = Zapisz plik
 
-extensionStringFormat = %S, %S
-fpTitleChooseApp      = Wybierz aplikację pomocniczą
-fpTitleChooseDL       = Wybierz folder pobierania
+useApp           = Używaj programu %S
+useDefault       = Używaj programu %S (domyślne)
+useOtherApp      = Wybierz inny…
+fpTitleChooseApp = Wybierz aplikację pomocniczą
+manageApp        = Szczegóły…
+alwaysAsk        = Zawsze pytaj
 
-soundFilePickerTitle  = Zmień dźwięk
+# %1$S - plugin name, 2$S - brandShortName
+usePluginIn               = Używaj wtyczki %1$S (w programie %2$S)
+# %1$S - type description (e.g. "Portable Document Format"), %2$S - type (e.g. "application/pdf")
+typeDescriptionWithType   = %1$S (%2$S)
+
+soundFilePickerTitle      = Zmień dźwięk
 
 alreadyDefaultClientTitle = Domyślny program
 alreadyDefault            = Program %S jest już obecnie domyślnym programem pocztowym.
