--- a/nl/mail/chrome/messenger/preferences/preferences.properties
+++ b/nl/mail/chrome/messenger/preferences/preferences.properties
@@ -15,26 +15,31 @@ confirmResetJunkTrainingText=Weet u zeker dat u de trainingsgegevens van het zel
 #### Downloads
 desktopFolderName=Bureaublad
 myDownloadsFolderName=Mijn downloads
-chooseDownloadFolderTitle=Kies downloadmap:
+chooseAttachmentsFolderTitle=Kies map
 
-#### Download Actions
-extensionNone=(GEEN)
-removeButtonSingle=Actie verwijderen
-removeButtonMultiple=Acties verwijderen
-removeTitleSingle=Actie verwijderen
-removeTitleMultiple=Acties verwijderen
-removeMessageSingle=De geselecteerde actie zal niet langer worden uitgevoerd zodra bestanden van de betreffende typen worden gedownload. Weet u zeker dat u deze actie wilt verwijderen?
-removeMessageMultiple=De geselecteerde acties zullen niet langer worden uitgevoerd zodra bestanden van de betreffende typen worden gedownload. Weet u zeker dat u deze acties wilt verwijderen?
+#### Applications
+
 fileEnding=%S-bestand
-saveToDisk=Opslaan op schijf
-openWith=Openen met %S
-actionsFiltered=De volgende acties komen overeen met uw zoekopdracht:
-actionsAll=Automatisch de geassocieerde actie uitvoeren bij elk van de volgende bestandstypen:
+saveFile=Bestand opslaan
 
-#### Change Action
-extensionStringFormat=%S, %S
+# LOCALIZATION NOTE (useApp, useDefault): %S = Application name
+useApp=%S gebruiken
+useDefault=%S gebruiken (standaard)
+
+useOtherApp=Andere gebruiken…
 fpTitleChooseApp=Hulptoepassing selecteren
-fpTitleChooseDL=Downloadmap selecteren
+manageApp=Toepassingsdetails…
+alwaysAsk=Altijd vragen
+
+ # LOCALIZATION NOTE (usePluginIn):
+64 # %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
+65 # %2$S = brandShortName from brand.properties (for example "Minefield")
+66 usePluginIn=%S gebruiken (in %S)
+
+# LOCALIZATION NOTE (typeDescriptionWithType):
+# %1$S = type description (for example "Portable Document Format")
+# %2$S = type (for example "application/pdf")
+typeDescriptionWithType=%1$S (%2$S)
 
 #### Sound Notifications
 soundFilePickerTitle=Geluid kiezen
