--- a/fr/mail/chrome/messenger/imapMsgs.properties
+++ b/fr/mail/chrome/messenger/imapMsgs.properties
@@ -438,10 +438,6 @@ pour diminuer le nombre de connexions conservées en mémoire cache.
 # Place the word %2$S where the total number of messages should appear.
 5103=Copie du message %1$S sur %2$S vers %3$S
 
-## @name IMAP_LOGIN_DISABLED
-## @loc None
-5104=Vous ne pouvez pas vous connecter sur %S car la connexion a été désactivée sur le serveur. Il est possible que vous deviez vous connecter en utilisant SSL ou TLS. Veuillez vérifier les paramètres du compte sur ce serveur.
-
 ## @name IMAP_MOVE_FOLDER_TO_TRASH
 ## @loc None
 # LOCALIZATION NOTE (5105): Do not translate the word %S below.
@@ -461,3 +457,8 @@ pour diminuer le nombre de connexions conservées en mémoire cache.
 ## @name IMAP_DELETE_FOLDER_BUTTON_LABEL
 ## @loc None
 5108=&Supprimer le dossier
+
+## @name IMAP_LOGIN_DISABLED
+## @loc None
+# LOCALIZATION NOTE (5109): %S is the server address
+5109=Vous ne pouvez pas vous connecter à %S car le serveur n'autorise pas l'authentification texte sans STARTTLS ou SSL/TLS. Essayez d'activer une connexion sécurisée ou une authentification sécurisée dans les paramètres de compte.
