--- a/fr/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/fr/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -274,16 +274,18 @@ chooseFileToAttach=Joindre les fichiers
 ##
 windowTitlePrefix=Rédaction :
 
-## String used by the empty subject dialog
+## Strings used by the empty subject dialog
 subjectEmptyTitle=Rappel de sujet
 subjectEmptyMessage=Votre message n'a pas de sujet.
 sendWithEmptySubjectButton=&Envoyer sans sujet
 cancelSendingButton=&Annuler l'envoi
 
-## String used by the dialog that informs the user about the newsgroup recipient
+## Strings used by the dialog that informs about lack of newsgroup support.
+noNewsgroupSupportTitle=Groupes de discussion non supportés
 recipientDlogMessage=Ce compte ne supporte que les destinataires de type courrier électronique. En continuant, les groupes seront ignorés.
 
-#String used by the alert that tells the user an e-mail address is invalid
+## Strings used by the alert that tells the user an e-mail address is invalid.
+addressInvalidTitle=Adresse de destinataire invalide
 addressInvalid=%1$S n'est pas une adresse valide car elle n'est pas de la forme utilisateur@domaine. Veuillez la corriger avant d'envoyer le courrier.
 ## String used by the dialog that ask the user to attach a web page
 attachPageDlogTitle=Veuillez spécifier un chemin pour la pièce jointe
