--- a/fr/mail/chrome/messenger/preferences/preferences.properties
+++ b/fr/mail/chrome/messenger/preferences/preferences.properties
@@ -15,26 +15,31 @@ confirmResetJunkTrainingText=Voulez-vous vraiment réinitialiser le filtre adapt
 #### Downloads
 desktopFolderName=Bureau
 myDownloadsFolderName=Mes Téléchargements
-chooseDownloadFolderTitle=Choisir le dossier de téléchargement :
+chooseAttachmentsFolderTitle=Choisir le dossier
 
-#### Download Actions
-extensionNone=(Aucune)
-removeButtonSingle=Supprimer l'action
-removeButtonMultiple=Supprimer les actions
-removeTitleSingle=Supprimer l'action
-removeTitleMultiple=Supprimer les actions
-removeMessageSingle=L'action sélectionnée ne sera plus effectuée lors du téléchargement de fichiers de type correspondant. Voulez-vous vraiment effacer cette action ?
-removeMessageMultiple=Les actions sélectionnées ne seront plus effectuées lors du téléchargement de fichiers de type correspondant. Voulez-vous vraiment effacer ces actions ?
+#### Applications
+
 fileEnding=Fichier %S
-saveToDisk=Enregistrer sur le disque
-openWith=Ouvrir avec %S
-actionsFiltered=Les actions suivantes correspondent à votre recherche :
-actionsAll=Effectuer automatiquement l'action associée avec les types de fichier suivants :
+saveFile=Enregistrer le fichier
 
-#### Change Action
-extensionStringFormat=%S, %S
+# LOCALIZATION NOTE (useApp, useDefault): %S = Application name
+useApp=Utiliser %S
+useDefault=Utiliser %S (défaut)
+
+useOtherApp=Use other…
 fpTitleChooseApp=Choisissez l'application
-fpTitleChooseDL=Choisissez le dossier de téléchargement
+manageApp=Détails de l'application…
+alwaysAsk=Toujours demander
+
+# LOCALIZATION NOTE (usePluginIn):
+# %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
+# %2$S = brandShortName from brand.properties (for example "Shredder")
+usePluginIn=Utiliser %1$S (dans %2$S)
+
+# LOCALIZATION NOTE (typeDescriptionWithType):
+# %1$S = type description (for example "Portable Document Format")
+# %2$S = type (for example "application/pdf")
+typeDescriptionWithType=%1$S (%2$S)
 
 #### Sound Notifications
 soundFilePickerTitle=Choisir un son
