--- a/pl/mail/chrome/messenger/imapMsgs.properties
+++ b/pl/mail/chrome/messenger/imapMsgs.properties
@@ -97,7 +97,6 @@ imapLoginFailedEnterNewPasswordButton = &Podaj nowe hasło
 5071=To jest folder publiczny.
 5072=To jest folder pocztowy współużytkowany przez użytkownika "%S".
 
-# 5073 - 5083: uprawnienia do folderów IMAP
 5073=Pełna kontrola
 5074=Wyszukiwanie
 5075=Odczyt
@@ -110,9 +109,6 @@ imapLoginFailedEnterNewPasswordButton = &Podaj nowe hasło
 5082=Zarządzanie folderem
 
 5084=Ten serwer nie obsługuje współdzielonych folderów.
-
-## @name IMAP_ACL_EXPUNGE_RIGHT
-## @loc None
 5085=Opróżnienie
 
 5090=Serwer %S rozłączył się. Być może został wyłączony lub wystąpił problem z siecią.
@@ -124,25 +120,12 @@ imapLoginFailedEnterNewPasswordButton = &Podaj nowe hasło
 5100=Za mało pamięci dla aplikacji.
 5102=Zalogowanie się do serwera %S jest niemożliwe, ponieważ wybrano tryb bezpiecznego uwierzytelniania, który nie jest obsługiwany przez ten serwer.\n\nAby zalogować się, należy wyłączyć bezpieczne uwierzytelnianie w ustawieniach tego konta.
 
-## @name IMAP_COPYING_MESSAGE_OF
-## @loc None
-# Place the word %3$S in your translation where the name of the destination folder should appear.
-# Place the word %1$S where the currently copying message should appear.
-# Place the word %2$S where the total number of messages should appear.
+# %3$S - destination folder; %1$S - currently copying; %2$S - total number of messages
 5103=Kopiowanie wiadomości %1$S z %2$S do %3$S
 
-## @name IMAP_MOVE_FOLDER_TO_TRASH
 5105=Czy na pewno usunąć folder '%S'?
-
-## @name IMAP_DELETE_NO_TRASH
 5106=Usunięcie tego folderu jest operacją nieodwracalną i spowoduje usunięcie wszystkich zawartych w nim wiadomości oraz podfolderów. Czy na pewno kontynuować usuwanie folderu '%S'?
-
-## @name IMAP_DELETE_FOLDER_DIALOG_TITLE
 5107=Usuń Folder
-
-## @name IMAP_DELETE_FOLDER_BUTTON_LABEL
 5108=&Usuń folder
 
-## @name IMAP_LOGIN_DISABLED
-## @loc None
 5109=Nie ma możliwości zalogowania się do %S, ponieważ serwer nie pozwala na logowanie bez szyfrowania STARTTLS lub SSL/TLS. Proszę spróbować włączyć bezpieczne uwierzytelnianie lub szyfrowanie połączenia w Konfiguracji kont (kategoria Konfiguracja serwera).
