--- a/pl/mail/chrome/messenger/activity.properties
+++ b/pl/mail/chrome/messenger/activity.properties
@@ -29,7 +29,7 @@ autosyncEventStatusText       = Pobrane wiadomości: %S
 autosyncEventStatusTextNoMsgs = Brak pobranych wiadomości
 autosyncContextDisplayText    = Synchronizowanie: %S
 
-deletedMessages    = Usunięto #1 wiadomość;Usunięto #1 wiadomości;Usunięto #1 wiadomości
+deletedMessages2   = Usunięto #1 wiadomość z folderu #2;Usunięto #1 wiadomości z folderu #2;Usunięto #1 wiadomości z folderu #2
 movedMessages      = Przeniesiono #1 wiadomość z #2 do #3;Przeniesiono #1 wiadomości z #2 do #3;Przeniesiono #1 wiadomości z #2 do #3
 copiedMessages     = Skopiowano #1 wiadomość z #2 do #3;Skopiowano #1 wiadomości z #2 do #3;Skopiowano #1 wiadomości z #2 do #3
 fromServerToServer = z #1 do #2
