--- a/nl/mail/chrome/messenger/imapMsgs.properties
+++ b/nl/mail/chrome/messenger/imapMsgs.properties
@@ -35,6 +35,13 @@
 #
 # ***** END LICENSE BLOCK *****
 
+imapLoginFailedTitle=Inloggen mislukt
+# LOCALIZATION NOTE (imapLoginFailed): Insert "%S" in your translation where
+# you wish to display the hostname of the server to which login failed.
+imapLoginFailed=Inloggen op server %S is mislukt.
+imapLoginFailedRetryButton=&Opnieuw proberen
+imapLoginFailedEnterNewPasswordButton=&Voer nieuw wachtwoord in
+
 #
 # The following are used by the imap code to display progress/status/error messages
 #
@@ -146,10 +153,6 @@
 ## @name IMAP_EMPTY_MIME_PART
 ## @loc None
 5032=Dit berichtkerngedeelte wordt op aanvraag gedownload.
-
-## @name IMAP_LOGIN_FAILED
-## @loc None
-5035=Inloggen op server %S is mislukt.
 
 ## @name IMAP_RECEIVING_MESSAGE_HEADERS_OF
 ## @loc None
