--- a/fr/mail/chrome/messenger/imapMsgs.properties
+++ b/fr/mail/chrome/messenger/imapMsgs.properties
@@ -35,6 +35,13 @@
 #
 # ***** END LICENSE BLOCK *****
 
+imapLoginFailedTitle=Échec de la connexion
+# LOCALIZATION NOTE (imapLoginFailed): Insert "%S" in your translation where
+# you wish to display the hostname of the server to which login failed.
+imapLoginFailed=La connexion au serveur %S a échoué.
+imapLoginFailedRetryButton=&Essayer à nouveau
+imapLoginFailedEnterNewPasswordButton=&Saisir un nouveau mot de passe
+
 #
 # The following are used by the imap code to display progress/status/error messages
 #
@@ -146,10 +153,6 @@
 ## @name IMAP_EMPTY_MIME_PART
 ## @loc None
 5032=Le corps de ce message sera téléchargé à votre demande.
-
-## @name IMAP_LOGIN_FAILED
-## @loc None
-5035=La connexion au serveur %S a échoué.
 
 ## @name IMAP_RECEIVING_MESSAGE_HEADERS_OF
 ## @loc None
