--- a/nl/mail/chrome/messenger/activity.properties
+++ b/nl/mail/chrome/messenger/activity.properties
@@ -45,8 +45,9 @@ autosyncEventStatusTextNoMsgs=Geen berichten gedownload
 autosyncContextDisplayText=%S synchronizeren
 
 # Message actions that show up in activity manager
-# LOCALIZATION NOTE (deletedMessages): #1 number of messages
-deletedMessages=#1 bericht verwijdert;#1 berichten verwijdert
+# LOCALIZATION NOTE (deletedMessages2): #1 number of messages, #2 folder name
+deletedMessages2=#1 bericht verwijdert uit #2;#1 berichten verwijdert uit #2
+
 # LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
 movedMessages=#1 bericht verplaatst van #2 naar #3;#1 berichten verplaatst van #2 naar #3
 # LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
