--- a/sv-SE/mail/chrome/messenger/imapMsgs.properties
+++ b/sv-SE/mail/chrome/messenger/imapMsgs.properties
@@ -441,10 +441,6 @@ IMAP-server och minska antalet cachade anslutningar.
 # Place the word %2$S where the total number of messages should appear.
 5103=Kopierar meddelande %1$S av %2$S till %3$S
 
-## @name IMAP_LOGIN_DISABLED
-## @loc None
-5104=Du kan inte logga in till %S eftersom servern har avaktiverat inloggning. Du kanske behöver ansluta via SSL eller TLS. Kontrollera kontoinställningarna för e-postservern.
-
 ## @name IMAP_MOVE_FOLDER_TO_TRASH
 ## @loc None
 # LOCALIZATION NOTE (5105): Do not translate the word %S below.
@@ -464,3 +460,8 @@ IMAP-server och minska antalet cachade anslutningar.
 ## @name IMAP_DELETE_FOLDER_BUTTON_LABEL
 ## @loc None
 5108=&Ta bort mapp
+
+## @name IMAP_LOGIN_DISABLED
+## @loc None
+# LOCALIZATION NOTE (5109): %S is the server address
+5109=Du kan inte logga in till %S eftersom servern inte tillåter klartextautentisering utan STARTTLS eller SSL/TLS. Försök att aktivera säker anslutning eller säker autentisering i kontoinställningarna.
