--- a/sv-SE/mail/chrome/messenger/preferences/preferences.properties
+++ b/sv-SE/mail/chrome/messenger/preferences/preferences.properties
@@ -15,26 +15,31 @@ confirmResetJunkTrainingText=Är du säker på att du vill återställa tillvän
 #### Downloads
 desktopFolderName=Skrivbord
 myDownloadsFolderName=Hämtade filer
-chooseDownloadFolderTitle=Välj mapp för bilagor:
+chooseAttachmentsFolderTitle=Välj mapp:
 
-#### Download Actions
-extensionNone=(INGEN)
-removeButtonSingle=Ta bort
-removeButtonMultiple=Ta bort
-removeTitleSingle=Ta bort åtgärd
-removeTitleMultiple=Ta bort åtgärder
-removeMessageSingle=Den markerade åtgärden kommer inte längre att utföras när filer av den berörda typen hämtas. Är du säker på att du vill ta bort denna åtgärd?
-removeMessageMultiple=De markerade åtgärderna kommer inte längre att utföras när filer av berörda typer hämtas. Är du säker på att du vill ta bort dessa åtgärder?
+#### Applications
+
 fileEnding=%S-fil
-saveToDisk=Spara till disk
-openWith=Öppna med %S
-actionsFiltered=Följande åtgärder matchar din sökning:
-actionsAll=Utför den associerade åtgärden automatiskt för följande filtyper:
+saveFile=Spara fil
 
-#### Change Action
-extensionStringFormat=%S, %S
+# LOCALIZATION NOTE (useApp, useDefault): %S = Application name
+useApp=Använd %S
+useDefault=Använd %S (standard)
+
+useOtherApp=Välj program…
 fpTitleChooseApp=Välj hjälpprogram
-fpTitleChooseDL=Mapp för bilagor
+manageApp=Programdetaljer…
+alwaysAsk=Fråga alltid
+
+# LOCALIZATION NOTE (usePluginIn):
+# %1$S = plugin name (for example "QuickTime Plugin-in 7.2")
+# %2$S = brandShortName from brand.properties (for example "Minefield")
+usePluginIn=Använd %1$S (i %2$S)
+
+# LOCALIZATION NOTE (typeDescriptionWithType):
+# %1$S = type description (for example "Portable Document Format")
+# %2$S = type (for example "application/pdf")
+typeDescriptionWithType=%1$S (%2$S)
 
 #### Sound Notifications
 soundFilePickerTitle=Välj ljudfil
