--- a/sv-SE/mail/chrome/messenger/activity.properties
+++ b/sv-SE/mail/chrome/messenger/activity.properties
@@ -45,8 +45,8 @@ autosyncEventStatusTextNoMsgs=Inga meddelanden hämtade
 autosyncContextDisplayText=Synkronisering: %S
 
 # Message actions that show up in activity manager
-# LOCALIZATION NOTE (deletedMessages): #1 number of messages
-deletedMessages=Tog bort #1 meddelande;Tog bort #1 meddelanden
+# LOCALIZATION NOTE (deletedMessages2): #1 number of messages, #2 folder name
+deletedMessages2=Tog bort #1 meddelande från #2;Tog bort #1 meddelanden från #2
 # LOCALIZATION NOTE (movedMessages): #1 number of messages, #2 and #3: folder names
 movedMessages=Flyttade #1 meddelande från #2 till #3;Flyttade #1 meddelanden från #2 till #3
 # LOCALIZATION NOTE (copiedMessages): #1 number of messages, #2 and #3: folder names
