--- a/fr/calendar/chrome/calendar/calendar.properties
+++ b/fr/calendar/chrome/calendar/calendar.properties
@@ -363,7 +363,7 @@ pw_change_failed_title= Échec de la modification du mot de passe principal
 updatesItem_default=Rechercher des mises à jour…
 updatesItem_defaultFallback=Rechercher des mises à jour…
 updatesItem_downloading=Téléchargement de %S…
-updatesItem_downloadingFallback=Téléchargement de la mise à jour…
+updatesItem_downloadingFallback=Téléchargement d'une mise à jour…
 updatesItem_resume=Reprendre le téléchargement de %S…
 updatesItem_resumeFallback=Reprendre le téléchargement de la mise à jour…
 updatesItem_pending=Appliquer la mise à jour téléchargée…
