--- a/fr/calendar/installer/custom.properties
+++ b/fr/calendar/installer/custom.properties
@@ -67,8 +67,8 @@ SURVEY_TEXT=&Dites-nous ce que vous avez pensé de $BrandShortName
 LAUNCH_TEXT=&Lancer $BrandShortName maintenant
 CREATE_ICONS_DESC=Créer des icônes pour $BrandShortName :
 ICONS_DESKTOP=Sur mon &Bureau
-ICONS_STARTMENU=Dans mon dossier « &Programmes » du « Menu démarrer »
-ICONS_QUICKLAUNCH=Dans ma « Barre de &lancement rapide »
+ICONS_STARTMENU=Dans mon dossier « &Programmes » du menu « Démarrer »
+ICONS_QUICKLAUNCH=Dans la barre « &Lancement rapide »
 WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName doit être fermé pour procéder à l'installation.\n\nVeuillez fermer $BrandShortName pour continuer.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandShortName doit être fermé pour procéder à la désinstallation.\n\nVeuillez fermer $BrandShortName pour continuer.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName est déjà en cours d'exécution.\n\nVeuillez fermer $BrandShortName avant de lancer la version que vous venez d'installer.
