--- a/fr/mail/chrome/messenger/appleMailImportMsgs.properties
+++ b/fr/mail/chrome/messenger/appleMailImportMsgs.properties
@@ -49,12 +49,12 @@
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
 ## @name APPLEMAILIMPORT_MAILBOX_SUCCESS
 ## @loc None
-2002=Les messages locaux ont été importés avec succès à partir de %S
+2002=Les messages locaux ont été importés avec succès depuis %S
 
 # Error Message
 ## @name APPLEMAILIMPORT_MAILBOX_BADPARAM
 ## @loc None
-2003=Une erreur interne est survenue. L'importation a échoué. Essayer d'importer à nouveau.
+2003=Une erreur interne est survenue. L'importation a échoué. Veuillez essayer à nouveau.
 
 # Error message
 # LOCALIZATION NOTE : Do not translate the word "%S" below.
