--- a/fr/mail/chrome/messenger/oeImportMsgs.properties
+++ b/fr/mail/chrome/messenger/oeImportMsgs.properties
@@ -100,9 +100,9 @@
 ## @loc None
 ## LOCALIZATION NOTE (2009): In this item, don't translate "%S"
 ## The variable %S will receive the name of the address book
-2009=Erreur lors de l'importation du carnet d'adresses %S, certaines adresses peuvent ne pas avoir été récupérées.
+2009=Erreur lors de l'importation de votre carnet d'adresses %S : certaines adresses risquent de ne pas avoir été récupérées lors de cette opération.
 
 # Error message
 ## @name OEIMPORT_ADDRESS_BADPARAM
 ## @loc None
-2010=Les paramètres passés pour l'importation du carnet d'adresses sont incorrects.
+2010=Les paramètres passés pour l'importation de votre carnet d'adresses sont incorrects.
